2007-02-20  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* src/VolumeButton.cs:

	Don't show volume popup window when using scrollwheel on
	the volume button. Fixes bug #410071.

2007-02-20  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/glade/SkipToWindow.glade:
	* src/SkipToWindow.cs:

	The slider on "skip to" window should respond to
	mousewheel events. Fixes bug #410067.

2007-02-11  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/muine-dbus.pc.in:
	* data/muine-plugin.pc.in:

	Fix paths in pkgconfig files. Fixes bug #400156, patch
	by Götz Waschk.

2007-02-08  Peter Johanson  <peter@peterjohanson.com>

	* src/PlaylistWindow.cs:
	* src/VolumeButton.cs:

	Import the Gtk# port (by Aaron Bockover) of the bacon volume button
	(originally by Ronald S. Bultje).  Hot new single click and adjust
	action.

2007-02-07  Brandon Hale  <brandon@ubuntu.com>

	* src/Global.cs:
	Change the process name to 'muine'.
	Based on a patch from Iain, original code by Aaron Bockover.

2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* libmuine/metadata.c: (FLAC_read_callback),
	(assign_metadata_flac):

	Update to include FLAC 1.1.3 compatibility (Note: this requires a
	gst-plugins-good patched with the compatibility as well in order to
	work). Fixes #400206. Patch from Götz Wasch.

2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* configure.in:
	
	Bump to using intltool 0.35.0 or newer, and new style po/LINGUAS
	support. Fixes #358478.

2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* TODO: Remove item about switching to Gtk about dialog.

2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* src/About.cs:

	Switch to using Gtk.AboutDialog. Patch from Tamara Roberson
	<tamara.roberson@gmail.com>, with some small tweaks by me. Fixes
	#355035.

2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* data/glade/SkipToWindow.glade:
	* src/SkipToWindow.cs:

	Make Left and Right move the slider in the Skip To window. Fixes
	#379478.
