@@ -12,6 +12,7 @@ DBUSSHARP_CSFILES =			\
 DBUSSHARP_ASSEMBLIES =		\
 	-r:Mono.Posix
 
+if !EXTERNAL_DBUS
 $(ASSEMBLY): $(DBUSSHARP_CSFILES)
 	$(CSC) -t:library $(LIBFLAGS) -out:$@ -r:$(top_builddir)/deps/dbus-sharp/NDesk.DBus.dll $(DBUSSHARP_CSFILES) $(DBUSSHARP_ASSEMBLIES)
 
@@ -19,6 +20,7 @@ all: $(ASSEMBLY)
 
 dbussharpdir = $(pkglibdir)
 dbussharp_DATA = $(TARGET) $(TARGET).config
+endif
 
 EXTRA_DIST = $(DBUSSHARP_CSFILES)
 
