@@ -1,3 +1,15 @@
+2007-03-03  Luis Medinas  <lmedinas@svn.gnome.org>
+
+	* DBusLib/Makefile.am:
+	* configure.in:
+	* deps/dbus-sharp-glib/Makefile.am:
+	* deps/dbus-sharp/Makefile.am:
+	* src/Makefile.am:
+
+	Allow linking against the external ndesk-dbus.
+	Patch by Sebastian Dröge <slomo@ubuntu.com>. 
+	Closes bgo #410214.
+
 2007-02-20  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* src/VolumeButton.cs:
